--- a/overview/core-concepts-architecture/core-terminology.mdx
+++ b/overview/core-concepts-architecture/core-terminology.mdx
@@ -1,236 +1,162 @@
 ---
-title: "Core Concepts & Terminology"
-description: "Build your mental model with essential terms such as test case, test suite, assertion, fixture, mock, and parameterized test. Learn how these concepts interrelate to support modular and maintainable test workflows."
+title: "Fundamental Concepts & Terminology"
+description: "Clarifies essential terms such as test case, test suite, fixture, assertion, mock, and death test. Each concept is explained in context, helping users orient themselves in the documentation and the codebase."
 ---
 
-# Core Concepts & Terminology
+# Fundamental Concepts & Terminology
 
-## Building Your Testing Mental Model
-
-Welcome to the foundational page of GoogleTest focused on core terminology and concepts. Understanding these will empower you to design modular, maintainable, and expressive tests for your C++ code. This page introduces essential terms such as **test case**, **test suite**, **assertion**, **fixture**, **mock**, and **parameterized test** and explains how they interconnect to form a robust testing workflow.
-
+This page clarifies the essential terms you will encounter when using GoogleTest's mocking framework, GoogleMock. Understanding these concepts is crucial for navigating the documentation and effectively designing, writing, and maintaining tests with mocks. Each term is explained in the context of how it enables you to describe and verify the behavior of your C++ code in tests.
 
 ---
 
-## Key Concepts Explained
+## Test Case
 
-### Test Case and Test Suite
+A **test case** is an individual scenario or condition that you want to verify about your code. In the context of GoogleTest, a test case corresponds to a function or method annotated as a test (e.g., via `TEST` or `TEST_F` macros). It exercises a unit of code and asserts expected results.
 
-- **Test Case** (now being replaced by the preferred term **Test Suite**): A grouping of related tests that share common context or purpose.
-- **Test**: An individual unit of testing code, verifying a specific behavior or scenario in your codebase.
 
-GoogleTest encourages organizing tests into test suites to mirror the structure of your production code, enabling more coherent test management.
+## Test Suite
 
-### Assertion
+A **test suite** is a collection of related test cases grouped logically, often by the component or feature being tested. In GoogleTest terminology, the test suite provides a structure and lifecycle for running multiple related tests together, sharing setup and teardown steps.
 
-An assertion is a statement that checks a condition in your code. GoogleTest provides a rich set of assertions allowing you to verify the correctness of values, states, and behaviors. Assertions can be fatal (`ASSERT_*`) or nonfatal (`EXPECT_*`), affecting whether the test continues after a failure.
 
-**Example:**
+## Fixture
+
+A **test fixture** is a class that sets up the common context (variables, environment, objects) shared by multiple test cases within a test suite. Using fixtures helps avoid duplication and enables more focused, maintainable tests. GoogleTest's `TEST_F` macro allows writing tests that use fixtures.
+
+
+## Assertion
+
+An **assertion** verifies that a certain condition holds true during a test. It is the basic building block for validating the correctness of code behavior. GoogleTest provides a rich set of assertions including `EXPECT_CALL` to verify mock method invocations and `ASSERT_EQ`, `EXPECT_TRUE`, etc., for general checks.
+
+
+## Mock
+
+A **mock** is a special object that simulates a real class or interface's behavior for testing purposes. It lets you define **expectations** about how it should be called, including which methods are called, with what arguments, how often, and what they return.
+
+In GoogleMock, mock classes are created by inheriting interfaces and declaring mocked methods with the `MOCK_METHOD` macro. Mocks enable interaction-based testing by verifying how your code interacts with its dependencies rather than just the output.
+
+
+## Expectation
+
+An **expectation** sets the rules on a mock method call using the `EXPECT_CALL` macro. It specifies which method is expected to be called, what arguments it should receive, how many times it should be called, in what order, and what return actions or side effects it should produce.
+
+Expectations can be customized with several clauses:
+
+- `.With()` to match multiple arguments as a tuple.
+- `.Times()` to specify how often the call is expected.
+- `.InSequence()` and `.After()` to define call order.
+- `.WillOnce()` and `.WillRepeatedly()` to set the call's behavior.
+- `.RetiresOnSaturation()` to deactivate expectations after they are met.
+
+
+## ExpectationSet
+
+An **ExpectationSet** is a collection of `Expectation` objects used when you want to specify that a mock method call must happen **after** multiple other expectations have been met. It is especially helpful to define complex ordering constraints.
+
+
+## Sequence
+
+A **Sequence** object represents an explicit ordered chain of expectations. By assigning multiple expectations to sequences using `.InSequence()`, you constrain the order in which those mock calls must occur during the test.
+
+Sequences can be combined or nested to express complex partial orders of interactions.
+
+
+## InSequence
+
+The **InSequence** class is a simple RAII helper that automatically creates an anonymous `Sequence` and assigns all expectations declared inside its scope to it. This encloses expectations in a sequence, requiring them to be matched in order.
+
+Example:
 
 ```cpp
-EXPECT_EQ(result, expected_value);  // Nonfatal assertion
-ASSERT_TRUE(pointer != nullptr);  // Fatal assertion
+{
+  InSequence s;
+  EXPECT_CALL(mock, Foo());
+  EXPECT_CALL(mock, Bar());
+}
 ```
 
-### Fixture
+In this example, `Foo()` must be called before `Bar()`, or the test fails.
 
-A **test fixture** is a class that sets up the test environment shared by multiple tests. It provides:
 
-- Setup and teardown capabilities before and after each test
-- Shared objects, resources, and helper methods
+## ON_CALL
 
-This promotes reusability and reduces duplication.
+The `ON_CALL(mock, Method(args))` macro defines the **default behavior** of a mock method when it is called but not explicitly expected. `ON_CALL` does not set any expectations that the call will happen; it only instructs how to behave.
 
-**Example Skeleton:**
+The default action specified by `ON_CALL` can be overridden by matching expectations (`EXPECT_CALL`).
+
+Example:
 
 ```cpp
-class MyTestFixture : public ::testing::Test {
- protected:
-  void SetUp() override {
-    // Prepare shared resources
-  }
-
-  void TearDown() override {
-    // Cleanup
-  }
-
-  // Shared test data
-  SomeClass obj_;
-};
+ON_CALL(mock, GetValue())
+    .WillByDefault(Return(42));
 ```
 
-Tests using fixtures are defined with `TEST_F()` allowing access to fixture members.
+This means that if no `EXPECT_CALL` matches a call to `GetValue()`, the mock will return 42.
 
-### Mock
 
-A **mock** simulates the behavior of a real object for testing purposes. GoogleMock (`gMock`) integrates tightly with GoogleTest. It allows you to:
+## EXPECT_CALL
 
-- Declare mock classes that imitate interfaces
-- Specify expected calls, their order, number of invocations, and behaviors
-- Validate interactions between the code under test and its dependencies
+The `EXPECT_CALL(mock, Method(args))` macro **creates an expectation** that the mock object's method will be called with arguments matching the specified matchers or values. It also allows you to specify how many times it is expected and what action it should perform.
 
-Mocks are especially valuable for testing parts of the system that interact with external components, complex dependencies, or nondeterministic behavior.
+Example:
 
-### Parameterized Test
+```cpp
+EXPECT_CALL(mock, SetValue(5))
+    .Times(3)
+    .WillRepeatedly(Return(true));
+```
 
-Parameterized tests allow running the same test logic with different input data sets. This helps cover more scenarios concisely.
+This expects that `SetValue(5)` is called exactly three times, returning true each time.
 
-GoogleTest supports multiple types of parameterized tests, enabling you to specify inputs and expected outcomes externally, driving the test through a uniform interface.
+
+## MockFunction
+
+A specialized mock class template `MockFunction<R(Args...)>` provides a generic way to mock standalone callbacks or `std::function`-style callables. It has a single mock method `Call` corresponding to the signature `R(Args...)`, which can be monitored and controlled.
+
+This is useful when you want to verify or simulate callback invocations without writing a dedicated mock class.
+
+
+## Death Test
+
+A **death test** verifies that certain code terminates (or "dies") as expected, usually due to fatal errors like assertions or exceptions. GoogleTest supports death tests for safety-critical checks.
+
+Though not directly tied to mocking, understanding death tests helps in comprehensive testing workflows.
 
 ---
 
-## How These Concepts Connect
-
-The following diagram outlines their relationship in a testing workflow:
+## Visual Diagram: Mock Expectation Workflow
 
 ```mermaid
-flowchart TD
-  TS[Test Suite] --> T1[Test 1]
-  TS --> T2[Test 2]
-  T1 -->|uses| Fixture[Fixture]
-  T2 -->|uses| Fixture
-  T1 -->|checks| Assertion[Assertion]
-  T2 -->|checks| Assertion
-  T1 -->|may use| Mock[Mock Object]
-  T2 -->|may use| Mock
-  T1 -->|may be| ParameterizedTest
-  T2 -->|may be| ParameterizedTest
+sequenceDiagram
+    participant Test
+    participant MockObject
+    participant ExpectationSet
 
-  subgraph ReusableComponents
-    Fixture
-    Mock
-  end
+    Test->>MockObject: Calls mock_method(args)
+    alt Expectation matches
+      MockObject->>ExpectationSet: Check sequence and prerequisites
+      ExpectationSet-->>MockObject: Active expectation found
+      MockObject-->>Test: Perform action (return/set)
+    else No match
+      MockObject-->>Test: Default action or failure
+    end
 ```
 
-In this flow:
+---
 
-- A test suite groups multiple tests.
-- Tests generally leverage test fixtures for shared setup.
-- Within tests, assertions verify correctness.
-- Tests may use mocks to replace real dependencies.
-- Parameterized tests reuse test logic for different inputs.
+## Practical Tips
+
+- Use **`EXPECT_CALL`** to verify interactions you care about, but avoid excessive expectations that over-constrain your tests.
+- Use **`ON_CALL`** to set default behavior for mock methods where you do not care about explicit expectations.
+- Define test **fixtures** to share common mock setup across multiple tests.
+- Use **`Sequence`**, **`.InSequence()`**, or **`.After()`** to ensure call order matters in your tests.
+- Specialized mocks like **`MockFunction`** enable easy mocking of callback interfaces.
+- Remember: Expectations must be set before the code under test exercises mocks; otherwise behavior is undefined.
 
 ---
 
-## Practical Tips and Best Practices
+For a deeper exploration of these terms and how to apply them effectively, refer to the [Mocking Reference](../reference/mocking.md), [gMock for Dummies](../gmock_for_dummies.md), and the [gMock Cookbook](../gmock_cook_book.md).
 
-- **Use Fixtures to avoid duplication:** If multiple tests share setup or teardown code, a fixture is your best friend.
-- **Mock only what you own or control:** Mocking external or third-party code you don’t own can cause maintenance headaches.
-- **Prefer focused assertions:** Aim to verify one aspect per assertion or test for clearer, maintainable tests.
-- **Apply parameterized tests for repetitive scenarios:** Avoid copying test code that only differs in input values.
-- **Understand Mock Strictness Levels:** To manage behavior when unexpected calls occur, learn about `NiceMock`, `NaggyMock` (default), and `StrictMock`. They let you suppress warnings, show warnings, or treat unexpected calls as failures respectively.
-
-
----
-
-## Getting Started with Mocks (Brief Intro)
-
-GoogleMock extends GoogleTest by letting you create mock classes easily using `MOCK_METHOD` macros. Here’s a quick overview for your reference:
-
-- **Defining a Mock:** Derive from an interface and declare mocked methods with `MOCK_METHOD`.
-
-```cpp
-class Foo {
- public:
-  virtual ~Foo() {}
-  virtual int GetSize() const = 0;
-  virtual void Process(int x) = 0;
-};
-
-class MockFoo : public Foo {
- public:
-  MOCK_METHOD(int, GetSize, (), (const, override));
-  MOCK_METHOD(void, Process, (int x), (override));
-};
-```
-
-- **Setting Expectations:** Use `EXPECT_CALL` to define how your mock should be used in a test.
-
-```cpp
-MockFoo mock;
-EXPECT_CALL(mock, GetSize())
-    .Times(1)
-    .WillOnce(Return(42));
-
-// code under test that calls mock.GetSize()
-```
-
-- **Adjusting Behavior:** Use `ON_CALL` to specify default behavior without enforcement of call counts.
-
-
-For a more thorough guide, explore the [gMock Cheat Sheet](https://google.github.io/googletest/gmock_cheat_sheet.html) and [gMock Cookbook](https://google.github.io/googletest/gmock_cook_book.html).
-
-
----
-
-## Troubleshooting Common Conceptual Pitfalls
-
-- **Confusing Test Case vs Test Suite:** GoogleTest moves toward using *Test Suite* consistently to reduce confusion.
-- **Overly Strict Expectations Causing Flaky Tests:** Use `ON_CALL` for default behavior, and `EXPECT_CALL` only where you want to verify calls.
-- **Uninteresting Calls Warnings:** If you see warnings about uninteresting calls to mock methods, consider using `NiceMock` to suppress them or add catch-all expectations with `EXPECT_CALL(...).Times(AnyNumber())`.
-- **Virtual Destructors Needed:** Ensure interfaces or base classes have virtual destructors to avoid undefined behavior when mocks are destructed.
-
-
----
-
-## Summary of Terms
-
-| Term                | Description
-|---------------------|----------------------------------------------------
-| Test                | An individual unit that validates a specific behavior.
-| Test Suite          | A group of related tests sharing context.
-| Assertion           | A statement verifying a condition, success or failure.
-| Fixture             | A shared environment setup for a group of tests.
-| Mock                | A simulated object that mimics real interfaces to validate interactions.
-| Parameterized Test  | A test that runs the same logic with multiple input data sets.
-
-
----
-
-## Next Steps
-
-If you’re ready to advance from concepts to implementation, explore these pages:
-
-- [Writing Your First Test](../../getting_started/first_test_run_validation/write_first_test) – Learn how to create and run basic tests.
-- [Feature Overview](../product-introduction/feature-overview) – Deepen knowledge of test structures and capabilities.
-- [Using Mock Classes](../../api-reference/mocking-apis/defining-mocks) – Understand how to define and use mocks effectively.
-
-
-
----
-
-## Additional Resources
-
-- [GoogleTest Overview & Introduction](../product-introduction/what-is-googletest) – The essence and value proposition of GoogleTest.
-- [Target Audience & Use Cases](../product-introduction/target-audience-use-cases) – Who benefits from GoogleTest, and why.
-- [GoogleMock Documentation](https://google.github.io/googletest/gmock_for_dummies.html) – Beginner-friendly gMock tutorial.
-- [gMock Cheat Sheet](https://google.github.io/googletest/gmock_cheat_sheet.html) – Quick reference for mocking syntax and options.
-- [gMock Cookbook](https://google.github.io/googletest/gmock_cook_book.html) – Recipes and advanced mocking patterns.
-
-
----
-
-## Troubleshooting Quick Tips
-
-<AccordionGroup title="Common Conceptual Questions">  
-<Accordion title="What exactly is the difference between a mock and a fixture?">  
-A fixture sets up shared context for tests; a mock is a simulated object to control and verify behavior in tests. Fixtures prepare test environments; mocks validate interactions.
-</Accordion>  
-<Accordion title="How do I decide when to mock or when not to mock?">  
-Mock what you own or control to isolate behavior. Avoid mocking complex third-party code unless absolutely necessary to avoid brittle tests.
-</Accordion>  
-<Accordion title="Why am I seeing warnings about uninteresting calls?">  
-It's because a mock method was called without an active expectation. Add `EXPECT_CALL(...).Times(AnyNumber())` or switch to `NiceMock` to suppress warnings.
-</Accordion>  
-<Accordion title="What is the recommended way to organize tests?">  
-Group logically-related tests into a test suite with shared fixtures if needed. Keep tests focused and manageable.
-</Accordion>  
-</AccordionGroup>
-
-
----
-
-_By mastering these foundational concepts, you set yourself up for success using GoogleTest’s rich set of tools to build reliable and maintainable C++ tests._
-
-
----
+<Info>
+This page fits within the "Core Concepts & Architecture" documentation group, providing foundational knowledge that helps users interpret the examples and API references in other documentation sections.
+</Info>
