--- a/getting-started/first-test-experience/writing-your-first-test.mdx
+++ b/getting-started/first-test-experience/writing-your-first-test.mdx
@@ -1,223 +1,174 @@
 ---
-title: "Writing Your First Test"
-description: "Step-by-step guide to authoring a simple test case with GoogleTest. Learn about basic test syntax and assertions so you can quickly see results and understand the test feedback provided."
+title: "Writing Your First Test Case"
+description: "Walks new users through setting up a simple test file: including the right headers, using core macros, and structuring a basic test function to validate their environment and understanding. Explains the anatomy of a standard test file."
 ---
 
-# Writing Your First Test
+# Writing Your First Test Case
 
-Welcome to your first step into writing tests with GoogleTest. This guide will walk you through authoring a simple test case using GoogleTest, demonstrating the basic test syntax and assertions. You'll quickly see how tests inform you of success or failure, helping you ensure your code behaves as expected.
+Welcome to your very first step with GoogleTest! This guide walks you through creating a simple test file, including the necessary headers, using GoogleTest’s core macros, and structuring a test function that will validate your environment and help you understand the basic anatomy of a test case.
 
 ---
 
-## 1. Understanding the Test Structure
+## 1. Setting Up Your Test File
 
-A basic GoogleTest test consists of three parts:
+Before writing tests, you need to create a test source file that includes GoogleTest’s headers and sets up the basic testing environment.
 
-- A **test case name**: groups related tests together.
-- A **test name**: identifies the specific test.
-- The **test body**: contains the code that exercises functionality and verifies outcomes.
+### Include the GoogleTest Header
 
-Here’s the simplest example:
-
-```cpp
-#include <gtest/gtest.h>
-
-// Defines a test case named "ExampleTest" with a test named "SimpleAssertion".
-TEST(ExampleTest, SimpleAssertion) {
-  // Test body: using an ASSERT macro
-  ASSERT_EQ(1, 1);  // Verifies that 1 equals 1.
-}
-```
-
-
-### What Happens Here?
-
-When the test runs, GoogleTest reports success if the condition holds; otherwise, it signals failure and prints diagnostic information.
-
-
-## 2. Writing Your First Test: Step-by-Step
-
-Follow these practical steps to author and run your first test:
-
-### Step 1: Include GoogleTest Header
-
-Add this inclusion at the top of your test source file:
+At the top of your test file, include the main GoogleTest header:
 
 ```cpp
 #include <gtest/gtest.h>
 ```
 
-This gives you access to all GoogleTest macros and functions.
+This header brings in the core GoogleTest functionalities including assertions, test macros, and test runner support.
 
+### Use the `main` Function Provided by GoogleTest
 
-### Step 2: Define a Test
+GoogleTest provides a default `main()` function, so you usually do not need to write your own `main()` unless you need special configuration. Linking with the `gtest_main` library will automatically provide this for you.
 
-Use the `TEST` macro, which takes two arguments: the test case name and the test name. Inside the macro, write your test code.
-
-Example:
-
-```cpp
-TEST(ArithmeticTest, AdditionWorks) {
-  EXPECT_EQ(2 + 2, 4);  // Checks if 2 + 2 equals 4
-}
-```
-
-The `EXPECT_EQ` macro checks for equality and records failure if the condition is false but allows the test to continue.
-
-
-### Step 3: Add Assertions
-
-There are two common assertion types:
-
-- **`ASSERT_*`**: Causes the test to stop immediately on failure.
-- **`EXPECT_*`**: Reports failure but continues running.
-
-Examples:
+If you want to write a custom main function for advanced control, you can do the following:
 
 ```cpp
-ASSERT_TRUE(is_valid());
-EXPECT_NE(value, 0);
-```
-
-Use `ASSERT_` when the rest of the test depends on a condition being true, and `EXPECT_` when you want to check multiple conditions independently.
-
-
-### Step 4: Compile Your Test
-
-Make sure your build includes linking against GoogleTest.
-
-A simple `g++` command (adjust include and lib paths as needed):
-
-```bash
-g++ my_test.cc -lgtest -lgtest_main -pthread -o my_test
-```
-
-
-### Step 5: Run Your Test
-
-Execute the test binary:
-
-```bash
-./my_test
-```
-
-You will see output indicating which tests passed or failed.
-
-Example output of a passing test:
-
-```
-[==========] Running 1 test from 1 test case.
-[----------] Global test environment set-up.
-[----------] 1 test from ArithmeticTest
-[ RUN      ] ArithmeticTest.AdditionWorks
-[       OK ] ArithmeticTest.AdditionWorks (0 ms)
-[----------] 1 test from ArithmeticTest (0 ms total)
-[==========] 1 test from 1 test case ran. (0 ms total)
-[  PASSED  ] 1 test.
-```
-
-If a test fails, GoogleTest prints detailed diagnostics to help you identify the problem.
-
----
-
-## 3. Practical Tips for Writing Effective Tests
-
-- **Name tests descriptively.** Use names that convey what is being tested.
-- **Keep tests small and focused.** Each test should verify one behavior.
-- **Use `EXPECT_` for multiple checks in a test.** Use `ASSERT_` if subsequent code depends on a prior condition.
-- **Check both expected and unexpected conditions.** Testing edge cases ensures robustness.
-
----
-
-## 4. Sample Test Code: Complete Example
-
-```cpp
-#include <gtest/gtest.h>
-
-// Simple function to test
-int Add(int a, int b) {
-  return a + b;
-}
-
-// Test case named MathTest, testing Add function correctness
-TEST(MathTest, AddPositiveNumbers) {
-  EXPECT_EQ(Add(1, 2), 3);
-  EXPECT_EQ(Add(10, 20), 30);
-}
-
-TEST(MathTest, AddNegativeNumbers) {
-  EXPECT_EQ(Add(-1, -2), -3);
-  EXPECT_EQ(Add(-10, 2), -8);
-}
-
-TEST(MathTest, AddMixedSignNumbers) {
-  EXPECT_EQ(Add(-1, 1), 0);
-  EXPECT_EQ(Add(0, 0), 0);
-}
-
 int main(int argc, char **argv) {
   ::testing::InitGoogleTest(&argc, argv);
   return RUN_ALL_TESTS();
 }
 ```
 
-Compile and run this test to immediately see your first GoogleTest results.
+This initializes GoogleTest and then runs all tests defined in your program.
 
----
+## 2. Writing Your First Test Function
 
-## 5. Understanding Test Feedback
+GoogleTest structures tests into **test cases** (sometimes called test suites) and **test functions** (test methods). 
 
-GoogleTest reports failures with clear messages including:
+### Basic Syntax
 
-- The assertion that failed (e.g., `EXPECT_EQ`)
-- Actual values versus expected values
-- Source file and line number where failure occurred
+Use the `TEST` macro to define a test function:
 
-Example failure output:
+```cpp
+TEST(TestCaseName, TestName) {
+  // Arrange: Set-up any variables or objects.
+
+  // Act: Run the code to be tested.
+
+  // Assert: Check conditions using EXPECT_ or ASSERT_ macros.
+  EXPECT_EQ(1, 1);  // Example assertion
+}
+```
+
+- `TestCaseName` groups related tests together (usually a class or module name).
+- `TestName` identifies this particular test case.
+
+### Example: A Simple Test
+
+Here’s a complete example of a minimal test that always passes:
+
+```cpp
+#include <gtest/gtest.h>
+
+// A simple test case named "ExampleTest" with a test named "BasicAssertion".
+TEST(ExampleTest, BasicAssertion) {
+  int x = 5;
+  int y = 5;
+  EXPECT_EQ(x, y);  // Checks if x equals y.
+}
+```
+
+### Typical Assertions
+
+- `EXPECT_EQ(val1, val2)` — Verifies values are equal but continues test on failure.
+- `ASSERT_EQ(val1, val2)` — Verifies values are equal and aborts the test if it fails.
+
+See the [GoogleTest Assertions Reference](https://google.github.io/googletest/reference/assertions.html) for all assertion types.
+
+## 3. Running Your Test
+
+Compile your test executable linking with GoogleTest libraries.
+
+From the command line:
+
+```shell
+./your_test_executable
+```
+
+GoogleTest runs all tests it finds in your executable, prints the results to the console, and returns an appropriate status code.
+
+### Expected Output
+
+Example output for a passing test:
 
 ```
-test.cc:15: Failure
-Expected equality of these values:
-  Add(1, 2)
-    Which is: 4
-  3
+[==========] Running 1 test from 1 test case.
+[----------] Global test environment set-up.
+[----------] 1 test from ExampleTest
+[ RUN      ] ExampleTest.BasicAssertion
+[       OK ] ExampleTest.BasicAssertion (0 ms)
+[----------] 1 test from ExampleTest (0 ms total)
+
+[==========] 1 test from 1 test case ran. (0 ms total)
+[  PASSED  ] 1 test.
 ```
 
-This tells you what was expected and what was returned, pinpointing the failure for quick fixes.
+If your test fails, GoogleTest will print detailed information about which assertion failed, including the source file and line number, actual values, and a snippet of your test code.
+
+## 4. Understanding the Anatomy of a Test
+
+- **Test suite (TestCaseName):** A group of related tests.
+- **Test (TestName):** A single function testing specific behavior.
+- **Setup and Teardown:**
+  - Use `TEST_F` macro with a test fixture class when you need common context or shared setup/cleanup for related tests.
+- **Assertions:** Validate expectations about the behavior.
+
+## 5. Best Practices
+
+- **Keep your tests small and focused.** Each test should verify one thing.
+- **Use meaningful names** for test cases and tests to describe their intent.
+- **Avoid side effects and dependencies** that could make tests flaky.
+
+## 6. Troubleshooting Common Pitfalls
+
+<Tip>
+If your test executable does not run any tests, check:
+
+- Ensure your test function uses the `TEST` or `TEST_F` macro.
+- Verify your build links with the `gtest` and (optionally) `gtest_main` libraries.
+- If you wrote your own `main()`, confirm that you call `InitGoogleTest()` and `RUN_ALL_TESTS()`.
+</Tip>
+
+<Tip>
+If your test fails unexpectedly, try running it with verbose output:
+
+```
+./your_test_executable --gtest_verbose=info
+```
+
+This prints detailed reasoning about which tests are run and why.
+</Tip>
+
+## 7. What Next?
+
+Once you have mastered this first test creation step, explore the following topics:
+
+- [Building and Running Your Test Suite](/getting-started/first-test-experience/building-and-running-tests)
+- [Writing More Complex Tests with Fixtures](gmock_for_dummies.md)
+- [Using Assertions Effectively](/guides/core-workflows/using-assertions)
+
+These guides will help you expand your testing skills progressively.
 
 ---
 
-## 6. Next Steps
+## Summary
 
-Once you're comfortable with basic tests:
-
-- Learn about more assertions and matchers to validate complex conditions.
-- Explore test fixtures (`TEST_F`) to share setup and teardown for related tests.
-- Integrate mock objects with GoogleMock to test interactions and dependencies.
-- Check out [Running & Validating Tests](../running-and-validating-tests) for test execution and filtering.
-- Review common pitfalls and troubleshooting tips in [Troubleshooting & Common Issues](../troubleshooting-and-common-issues).
-
+This page introduced the essentials of writing your first test case with GoogleTest: including headers, defining tests with the `TEST` macro, and running tests. It explained test anatomy, common assertions, and practical tips to get started with confidence.
 
 ---
 
-## Troubleshooting Common Issues
-
-- **Tests not running?** Ensure you call `RUN_ALL_TESTS()` in your main function.
-- **Assertion macros missing?** Verify you included `<gtest/gtest.h>`.
-- **Tests failing unexpectedly?** Check if the expected and actual values are what you intended to test.
-- **Linker errors?** Link your test program with the GoogleTest libraries (`-lgtest -lgtest_main`).
-
+### References
+- [GoogleTest Primer - Getting Started](https://google.github.io/googletest/primer.html)
+- [Assertions Reference](https://google.github.io/googletest/reference/assertions.html)
+- [gMock for Dummies](gmock_for_dummies.md) for mock testing
 
 ---
 
-## References
-
-- [GoogleTest Primer](../primer)
-- [GoogleMock Cookbook](../gmock_cook_book)
-- [Matchers Reference](../matchers.md)
-- [Setting Expectations and Actions](../mock-expectations-actions.md)
-
-
----
-
-For questions or help, see the [GoogleTest FAQ](../../faq/getting-started-troubleshooting/faq-quickstart-resources).
+> **Tip:** Remember, the cornerstone of successful testing is establishing clear expectations early, writing concise tests, and leveraging GoogleTest’s powerful macros to validate behavior effectively.
